all district pages updated

--- a/fire_districts/commercial-1-port-norris.html
+++ b/fire_districts/commercial-1-port-norris.html
@@ -163,7 +163,7 @@
   </details>
 
   <details>
-    <summary>Guy Fabreze</summary>
+    <summary>Guy DeFabrites</summary>
     <ul class="checks">
       <li><span class="checkmark ok">✓</span> Outreach planned / in-person delivery expected (Feb 12)</li>
       <li><span class="checkmark no">✕</span> Response received</li>
@@ -200,28 +200,55 @@
   </details>
 
   <details>
-    <summary>County-wide issues (applies to all districts)</summary>
-    <ul class="clean">
-      <li>Firefighter and EMS staffing shortages</li>
-      <li>Volunteer model vs cost-of-living pressures</li>
-      <li>Extremely low voter turnout</li>
-      <li>Limited public visibility and press coverage</li>
-      <li>EMS uncertainty related to Inspira contracts</li>
-      <li>Radio communication limitations during mutual aid</li>
-    </ul>
-  </details>
+        <summary>County-wide issues (applies to all districts)</summary>
+        <div class="inside">
+          <ul class="clean">
+            <li><b>Staffing:</b> Most, if not all, districts need more firefighters and EMS personnel.</li>
+            <li><b>Volunteer model vs affordability:</b> The use of volunteers versus the cost of living and affordability situations should be discussed.</li>
+            <li><b>Turnout:</b> Low voter turnout should be re-discussed, as it calls into question the strength of election processes.</li>
+            <li><b>Visibility gap:</b> Lack of public attendance and press coverage of meetings leaves the public and voters in the dark regarding essential emergency services.</li>
+            <li><b>Website/Social Media Maintenance: Online information not being updated or not even existing leads to lack of coordination for the public to know meeting days/times/locations, meeting minutes missing, underutilized social media marketing opportunities, etc.</b></li>
+            <li><b>Legal Notice vs Meaningful Notice:</b> Traditionally, public meetings across the county only needed to be advertised in one or two newspapers. As the digital age takes over, there is a push to publish on websites, but is that enough?</li>
+            <li><b>EMS uncertainty:</b> The ongoing Inspira contract discussions leaves districts in limbo about how to handle EMS coverage on a long term vision.</li>
+            <li><b>Radio programming:</b> The lack of a radio programmer hinders inter-county communication during mutual aid endeavors.</li>
+          </ul>
+        </div>
+      </details>
 </section>
 
-<!-- COVERAGE -->
+<!-- COVERAGE INSIGHTS -->
 <section class="card" id="coverage">
-  <h2>Coverage</h2>
+  <h2>Coverage Insights</h2>
 
-  <details>
-    <summary>Coverage log</summary>
+  <details open>
+    <summary>What this coverage revealed</summary>
     <ul class="clean">
-      <li><b>Volunteer outreach:</b> Provided a lawn sign to assist with recruitment efforts.</li>
-      <li><b>Next meeting:</b> February 12 — plan to distribute questionnaires and confirm election details.</li>
-      <li><b>Interviews / posts:</b> TBD</li>
+      <li>
+        <b>Accessible leadership:</b> District leadership and members were cooperative,
+        responsive, and willing to engage at the most recent meeting attended.
+      </li>
+      <li>
+        <b>Commissioner vacancies:</b> The district is currently operating with
+        <b>3 commissioners instead of the full 5</b>, reflecting an ongoing challenge
+        filling elected seats.
+      </li>
+      <li>
+        <b>Participation gap:</b> Limited public awareness of fire district governance
+        appears to contribute directly to low turnout and low candidate participation.
+      </li>
+      <li>
+        <b>Temporary information gaps:</b> Website updates and meeting information
+        briefly fell behind, creating uncertainty about whether meetings were occurring.
+      </li>
+      <li>
+        <b>Issue corrected:</b> That information gap has since been addressed, and
+        meeting details are now publicly accessible.
+      </li>
+      <li>
+        <b>Broader takeaway:</b> This district illustrates how small administrative
+        delays can create public confusion—even when a district is operating
+        in good faith and fulfilling its responsibilities.
+      </li>
     </ul>
   </details>
 </section>
