--- a/fire_districts/commercial-2-mauricetown.html
+++ b/fire_districts/commercial-2-mauricetown.html
@@ -379,7 +379,7 @@
 
         <p class="small">
           <b>Quick summary:</b> Mauricetown Fire Company (Commercial Township Fire District 2) appears to have two commissioner seats open,
-          with <b>Clifford Sharp</b> and <b>Ron Sutton</b> up for re-election. I am currently unaware of any ballot questions for this district,
+          with <b>Seth Beaumont</b> and <b>Ron Sutton</b> up for re-election. I am currently unaware of any ballot questions for this district,
           but I plan to ask directly at the next scheduled meeting on <b>February 2</b>. Since the candidate names are known,
           I also plan to provide questionnaires directly at the meeting to encourage participation.
         </p>
@@ -393,12 +393,12 @@
       <p class="small">Each candidate has their own section. Questionnaire responses will be posted as received.</p>
 
       <details>
-        <summary>Clifford Sharp (running for re-election)</summary>
+        <summary>Seth Beaumont</summary>
         <div class="inside">
           <div class="callout">
             <span class="tag">Questionnaire</span>
             <ul class="checks">
-              <li><span class="checkmark ok" aria-hidden="true">✓</span> Outreach planned / in-person delivery expected (Feb 2)</li>
+              <li><span class="checkmark ok" aria-hidden="true">✓</span> Outreach delivered (Feb 2)</li>
               <li><span class="checkmark no" aria-hidden="true">✕</span> Response received</li>
             </ul>
             <p class="small" style="margin:10px 0 0;">
@@ -414,7 +414,7 @@
           <div class="callout">
             <span class="tag">Questionnaire</span>
             <ul class="checks">
-              <li><span class="checkmark ok" aria-hidden="true">✓</span> Outreach planned / in-person delivery expected (Feb 2)</li>
+              <li><span class="checkmark ok" aria-hidden="true">✓</span> Outreach delivered (Feb 2)</li>
               <li><span class="checkmark no" aria-hidden="true">✕</span> Response received</li>
             </ul>
             <p class="small" style="margin:10px 0 0;">
@@ -433,11 +433,10 @@
       </p>
 
       <details>
-        <summary>No known ballot questions yet (to be confirmed)</summary>
+        <summary>The Budget</summary>
         <div class="inside">
           <p class="small" style="margin:0;">
-            At this time, I do not have confirmed ballot question language for Mauricetown FD2.
-            I plan to confirm this directly at the <b>February 2</b> meeting.
+            As learned at the candidate forum, a budget presentation was probably presented to the public a few months ago, though I was unaware.
           </p>
         </div>
       </details>
@@ -478,6 +477,7 @@
             <li><b>Volunteer model vs affordability:</b> The use of volunteers versus the cost of living and affordability situations should be discussed.</li>
             <li><b>Turnout:</b> Low voter turnout should be re-discussed, as it calls into question the strength of election processes.</li>
             <li><b>Visibility gap:</b> Lack of public attendance and press coverage of meetings leaves the public and voters in the dark regarding essential emergency services.</li>
+            <li><b>Website/Social Media Maintenance: Online information not being updated or not even existing leads to lack of coordination for the public to know meeting days/times/locations, meeting minutes missing, underutilized social media marketing opportunities, etc.</b></li>
             <li><b>Legal Notice vs Meaningful Notice:</b> Traditionally, public meetings across the county only needed to be advertised in one or two newspapers. As the digital age takes over, there is a push to publish on websites, but is that enough?</li>
             <li><b>EMS uncertainty:</b> The ongoing Inspira contract discussions leaves districts in limbo about how to handle EMS coverage on a long term vision.</li>
             <li><b>Radio programming:</b> The lack of a radio programmer hinders inter-county communication during mutual aid endeavors.</li>
@@ -486,24 +486,45 @@
       </details>
     </section>
 
-    <!-- COVERAGE -->
-    <section class="card" id="coverage">
-      <h2>Coverage</h2>
-      <p class="small">
-        District-specific coverage links live here (posts, interviews, meeting notes, etc.).
-      </p>
+    <!-- COVERAGE INSIGHTS -->
+<section class="card">
+  <h2>Coverage Insights</h2>
 
-      <details>
-        <summary>Coverage log</summary>
-        <div class="inside">
-          <ul class="clean">
-            <li><b>Meeting coverage:</b> Planned follow-up at the <b>February 2</b> meeting to confirm ballot questions and encourage candidate participation.</li>
-            <li><b>Interviews:</b> TBD</li>
-            <li><b>Posts / articles:</b> TBD</li>
-          </ul>
-        </div>
-      </details>
-    </section>
+  <details open>
+    <summary>What this coverage revealed</summary>
+    <ul class="clean">
+      <li>
+        <b>Best attended district:</b> From the first meeting I attended to the last, these meetings seemed to have the most public attendance. Usually about 5-10 firefighters 
+        are there to listen to what's going on.
+      </li>
+      <li>
+        <b>Budget sensitivity:</b> These conversations highlight how even small
+        financial adjustments can become complex when districts operate with
+        tight margins and limited flexibility.
+      </li>
+      <li>
+        <b>Public learning curve:</b> The discussion also underscored how fire district
+        finances are not always intuitive to the public or the press, requiring
+        additional context to fully understand tradeoffs and constraints.
+      </li>
+      <li>
+        <b>Training requirements surfaced:</b> This district is where additional
+        <b>driver training requirements</b> first came to light during coverage.
+      </li>
+      <li>
+        <b>County-wide implications:</b> Those training requirements were prompted by
+        an accident involving another fire district, demonstrating how actions in
+        one district can trigger broader policy or training changes across
+        multiple districts.
+      </li>
+      <li>
+        <b>Broader takeaway:</b> Fire districts do not operate in isolation—financial,
+        operational, administrative, and training decisions in one area can have ripple effects
+        county-wide.
+      </li>
+    </ul>
+  </details>
+</section>
 
     <footer>
       <div class="footer-row">
