--- a/fire_districts/commercial-3-laurel-lake.html
+++ b/fire_districts/commercial-3-laurel-lake.html
@@ -125,20 +125,30 @@
   <section class="card" id="ballot">
     <h2>Ballot Questions</h2>
 
+    <a href="https://www.commercialtwpbofc3.com/about-1" target="_blank" rel="noopener noreferrer">Sourced from the district's website</a>
+
+    <h3>Here are some further explanations of the ballot questions sourced from correspondence with Kacy Catalano, the fire district secretary</h3>
+
     <details>
-      <summary>Budget approval (wording not yet confirmed)</summary>
+      <summary>Budget approval clarification</summary>
       <p class="small">
-        There appears to be a budget approval question on the ballot. Official ballot language has not yet
-        been obtained and will be posted once confirmed.
+        This is the same levy as last year.
       </p>
     </details>
 
     <details>
-      <summary>LOSAP modification (points system)</summary>
+      <summary>Capital outlay clarification</summary>
       <p class="small">
-        A ballot question related to <b>LOSAP</b> is expected. While official wording is not yet available,
-        the discussion appears to center on changing how points are earned — moving from percentage-based
-        calculations to a system based on <b>number of calls responded to and attendance</b>.
+        The SCBA packs and bottles are pieces of necessary pieces of equipment that ought/need to be replaced. The money is already available in related accounts and the 
+        district has made plans to save moving forward on a quarterly basis to help manage the payouts incrementally. The district simply needs public approval.
+      </p>
+    </details>
+
+    <details>
+      <summary>LOSAP points system clarification</summary>
+      <p class="small">
+        The reason for the change is that the current system is based on percentages and, from Kacy's perspective, was not adhered to historically. The new system is meant to help 
+        recruit and retain volunteers through a well defined, transparent, and publicized program. 
       </p>
     </details>
   </section>
@@ -154,35 +164,56 @@
         <li><b>Fuel costs:</b> Laurel Lake appears to cover fuel expenses for other fire districts within Commercial Township.</li>
         <li><b>Water testing:</b> There is an ongoing issue involving coliform detection, which is expected to be followed up.</li>
         <li><b>Website maintenance:</b> Maintenance issues appear to be resolving through the use of outside assistance.</li>
+        <li><b>Bed Bugs:</b>Apparently there is a recurring issue with some people who are being rescued bringing bed bugs along with them to the station. Discussions were had about how to handle it more efficiently moving forward.</li>
+        <li><b>Body Cameras:</b>Suggestions were made to have firefighters and EMS personnel wear body cameras to have documentation ready should lawsuits arrive regarding potential future allegations </li>
       </ul>
     </details>
 
     <details>
-      <summary>County-wide issues (applies to all districts)</summary>
-      <ul class="clean">
-        <li>Staffing shortages across fire and EMS services</li>
-        <li>Volunteer sustainability vs cost of living</li>
-        <li>Low voter turnout in fire district elections</li>
-        <li>Lack of consistent public meeting coverage</li>
-        <li>EMS uncertainty related to Inspira contracts</li>
-        <li>Inter-district radio communication limitations</li>
-      </ul>
-    </details>
+        <summary>County-wide issues (applies to all districts)</summary>
+        <div class="inside">
+          <ul class="clean">
+            <li><b>Staffing:</b> Most, if not all, districts need more firefighters and EMS personnel.</li>
+            <li><b>Volunteer model vs affordability:</b> The use of volunteers versus the cost of living and affordability situations should be discussed.</li>
+            <li><b>Turnout:</b> Low voter turnout should be re-discussed, as it calls into question the strength of election processes.</li>
+            <li><b>Visibility gap:</b> Lack of public attendance and press coverage of meetings leaves the public and voters in the dark regarding essential emergency services.</li>
+            <li><b>Website/Social Media Maintenance: Online information not being updated or not even existing leads to lack of coordination for the public to know meeting days/times/locations, meeting minutes missing, underutilized social media marketing opportunities, etc.</b></li>
+            <li><b>Legal Notice vs Meaningful Notice:</b> Traditionally, public meetings across the county only needed to be advertised in one or two newspapers. As the digital age takes over, there is a push to publish on websites, but is that enough?</li>
+            <li><b>EMS uncertainty:</b> The ongoing Inspira contract discussions leaves districts in limbo about how to handle EMS coverage on a long term vision.</li>
+            <li><b>Radio programming:</b> The lack of a radio programmer hinders inter-county communication during mutual aid endeavors.</li>
+          </ul>
+        </div>
+      </details>
   </section>
 
-  <!-- COVERAGE -->
-  <section class="card" id="coverage">
-    <h2>Coverage</h2>
+  <!-- COVERAGE INSIGHTS -->
+<section class="card">
+  <h2>Coverage Insights</h2>
 
-    <details>
-      <summary>Coverage log</summary>
-      <ul class="clean">
-        <li><b>Meeting coverage:</b> Additional information may be obtained at the February 8 meeting.</li>
-        <li><b>Interviews:</b> None conducted yet.</li>
-        <li><b>Articles:</b> TBD</li>
-      </ul>
-    </details>
-  </section>
+  <details open>
+    <summary>What this coverage revealed</summary>
+    <ul class="clean">
+      <li>
+        <b>High level of cooperation and accessibility:</b> District leadership was consistently responsive and willing to engage, with Kacy Catalano serving as a primary point of contact throughout the process.
+      </li>
+      <li>
+        <b>Direct participation improved accuracy:</b> Kacy participated in a full one-hour radio interview, attended the informational forum, and regularly followed up to help close knowledge gaps and verify details.
+      </li>
+      <li>
+        <b>Demonstrates the value of communication:</b> Clear, consistent coordination made it easier to correct errors, update website information, and reduce public confusion.
+      </li>
+      <li>
+        <b>Commissioner recruitment challenges:</b> One commissioner was asked to fill a vacant seat with little or no prior firefighting or fire district experience, underscoring how difficult it can be to recruit board members.
+      </li>
+      <li>
+        <b>Administrative burden remains high:</b> Even with strong leadership and engagement, districts routinely juggle operational, staffing, and governance issues.
+      </li>
+      <li>
+        <b>Broader takeaway:</b> This district shows how much progress is possible with transparency and coordination—but also how fragile the system can be when it relies heavily on a small number of engaged individuals.
+      </li>
+    </ul>
+  </details>
+</section>
 
   <footer>
     © 2026 InformTheVoteNJ.com • Built for clarity over hype
