--- a/fire_districts/downe-2-dividing-creek.html
+++ b/fire_districts/downe-2-dividing-creek.html
@@ -557,6 +557,10 @@
             <li>
               <b>Meeting schedule unclear:</b> Until a meeting time and location is confirmed, residents may not have a clear path to attend and ask questions.
             </li>
+            <li>
+              <b>"Inheriting a headache":</b> As per my phone conversation with Mayor Rothman, he acknowledges that 3 prior commissioners stepped down and the new people will 
+              have a challenge ahead of them. I did not get clarification about what exactly the challenges will be. 
+            </li>
           </ul>
         </div>
       </details>
@@ -569,7 +573,8 @@
             <li><b>Volunteer model vs affordability:</b> The use of volunteers versus the cost of living and affordability situations should be discussed.</li>
             <li><b>Turnout:</b> Low voter turnout should be re-discussed, as it calls into question the strength of election processes.</li>
             <li><b>Visibility gap:</b> Lack of public attendance and press coverage of meetings leaves the public and voters in the dark regarding essential emergency services.</li>
-            <li><b>Legal Notice vs Meaningful Notice:</b> Traditionally, public meetings across the county only needed to be advertised in one or two newspapers. As the digital age takes over, there is a push to publish on websites, but is that enough? Vineland's current data center issue and low awareness in fire districts suggest more advertising could be done.</li>
+            <li><b>Website/Social Media Maintenance: Online information not being updated or not even existing leads to lack of coordination for the public to know meeting days/times/locations, meeting minutes missing, underutilized social media marketing opportunities, etc.</b></li>
+            <li><b>Legal Notice vs Meaningful Notice:</b> Traditionally, public meetings across the county only needed to be advertised in one or two newspapers. As the digital age takes over, there is a push to publish on websites, but is that enough?</li>
             <li><b>EMS uncertainty:</b> The ongoing Inspira contract discussions leaves districts in limbo about how to handle EMS coverage on a long term vision.</li>
             <li><b>Radio programming:</b> The lack of a radio programmer hinders inter-county communication during mutual aid endeavors.</li>
           </ul>
@@ -577,24 +582,52 @@
       </details>
     </section>
 
-    <!-- COVERAGE -->
-    <section class="card" id="coverage">
-      <h2>Coverage</h2>
-      <p class="small">
-        District-specific coverage links live here (posts, interviews, meeting notes, etc.).
-      </p>
+    <!-- COVERAGE INSIGHTS -->
+<section class="card">
+  <h2>Coverage Insights</h2>
 
-      <details>
-        <summary>Coverage log</summary>
-        <div class="inside">
-          <ul class="clean">
-            <li><b>Post / article:</b> TBD</li>
-            <li><b>Interview:</b> TBD</li>
-            <li><b>Meeting coverage:</b> TBD — seeking clarification about meeting schedule and election details via township or district contacts.</li>
-          </ul>
-        </div>
-      </details>
-    </section>
+  <details open>
+    <summary>What this coverage revealed</summary>
+    <ul class="clean">
+      <li>
+        <b>Major governance transition underway:</b> According to Mayor Rothman, three prior fire district commissioners stepped down and three new commissioners are coming 
+        on — summarized bluntly as “they’re inheriting a headache.”
+      </li>
+      <li>
+        <b>Challenges go beyond simple maintenance issues:</b> Unlike districts where minor website updates or delayed postings caused confusion, Dividing Creek appears to be 
+        facing deeper administrative and organizational hurdles during a leadership transition.
+      </li>
+      <li>
+        <b>Unclear points of contact:</b> Mayor Rothman identified Rob Lore as the primary point of contact, but outreach attempts have so far resulted in phone tag involving 
+        multiple people, including the fire chief.
+      </li>
+      <li>
+        <b>Lack of basic public infrastructure:</b> As of early February 2026, the district has no dedicated website and no publicly posted meeting dates, times, or locations, 
+        making it extremely difficult for residents, the press, and voters to engage.
+      </li>
+      <li>
+        <b>High barrier to public participation:</b> Even with persistence, meeting information required piecing together clues from meeting minutes — a level of effort most 
+        residents would never attempt.
+      </li>
+      <li>
+        <b>Legal notice vs. meaningful notice:</b> Dividing Creek illustrates a county-wide issue where technical compliance (newspaper notices or obscure postings) oftentimes does not 
+        translate into real public awareness. 
+      </li>
+      <li>
+        <b>Visibility is fragile during transitions:</b> When districts lack stable communication systems, even normal operations can appear inactive or opaque to the 
+        public — especially in small districts with limited resources.
+      </li>
+      <li>
+        <b>Simple improvements still matter:</b> Even without a full website, clearly directing newcomers to an active social media page and establishing scheduled 
+        correspondence with points of contact would dramatically improve accessibility.
+      </li>
+      <li>
+        <b>Broader takeaway:</b> Dividing Creek shows how governance transitions, limited staffing, and weak communication infrastructure can compound — not through bad faith, 
+        but through capacity limits that leave the public effectively shut out.
+      </li>
+    </ul>
+  </details>
+</section>
 
     <footer>
       <div class="footer-row">
