--- a/fire_districts/maurice-river-1-leesburg-26.html
+++ b/fire_districts/maurice-river-1-leesburg-26.html
@@ -485,8 +485,7 @@
           <b>Quick summary:</b> I attended one district meeting on <b>November 24</b>, where I was told two gentlemen
           (<b>Corey Shaffer</b> and <b>Rob Creamer</b>) would be up for re-election.
           I handed over business cards to encourage participation with my project, but I have not received communication from them.
-          The meeting in December did not appear to occur as expected. I may be able to get more information at tomorrow night’s meeting,
-          weather permitting. No known ballot questions or district-specific issues came up at the November meeting.
+          The meetings in December and January did not appear to occur as expected. However, I may have inferred a new meeting date from minutes.
         </p>
       </div>
     </section>
@@ -542,7 +541,7 @@
         <summary>No ballot questions currently known</summary>
         <div class="inside">
           <p class="small" style="margin:0;">
-            No ballot questions were raised at the November 24 meeting. This will be re-checked at the next meeting and/or through district confirmation.
+            To my recollection, no ballot questions were raised at the November 24 meeting. This will be re-checked at the next meeting and/or through district confirmation.
           </p>
         </div>
       </details>
@@ -572,7 +571,8 @@
             <li><b>Volunteer model vs affordability:</b> The use of volunteers versus the cost of living and affordability situations should be discussed.</li>
             <li><b>Turnout:</b> Low voter turnout should be re-discussed, as it calls into question the strength of election processes.</li>
             <li><b>Visibility gap:</b> Lack of public attendance and press coverage of meetings leaves the public and voters in the dark regarding essential emergency services.</li>
-            <li><b>Legal Notice vs Meaningful Notice:</b> Traditionally, public meetings across the county only needed to be advertised in one or two newspapers. As the digital age takes over, there is a push to publish on websites, but is that enough? Vineland's current data center issue and low awareness in fire districts suggest more advertising could be done.</li>
+            <li><b>Website/Social Media Maintenance: Online information not being updated or not even existing leads to lack of coordination for the public to know meeting days/times/locations, meeting minutes missing, underutilized social media marketing opportunities, etc.</b></li>
+            <li><b>Legal Notice vs Meaningful Notice:</b> Traditionally, public meetings across the county only needed to be advertised in one or two newspapers. As the digital age takes over, there is a push to publish on websites, but is that enough?</li>
             <li><b>EMS uncertainty:</b> The ongoing Inspira contract discussions leaves districts in limbo about how to handle EMS coverage on a long term vision.</li>
             <li><b>Radio programming:</b> The lack of a radio programmer hinders inter-county communication during mutual aid endeavors.</li>
           </ul>
@@ -580,25 +580,51 @@
       </details>
     </section>
 
-    <!-- COVERAGE -->
-    <section class="card" id="coverage">
-      <h2>Coverage</h2>
-      <p class="small">
-        District-specific coverage links live here (posts, interviews, meeting notes, etc.).
-      </p>
+    <!-- COVERAGE INSIGHTS -->
+<section class="card">
+  <h2>Coverage Insights</h2>
 
-      <details>
-        <summary>Coverage log</summary>
-        <div class="inside">
-          <ul class="clean">
-            <li><b>Post / article:</b> TBD</li>
-            <li><b>Interview:</b> TBD</li>
-            <li><b>Meeting coverage:</b> Attended the district meeting on <b>November 24</b>. The December meeting did not appear to occur as expected.
-              Planning to seek updates at tomorrow night’s meeting, weather permitting.</li>
-          </ul>
-        </div>
-      </details>
-    </section>
+  <details open>
+    <summary>What this coverage revealed</summary>
+    <ul class="clean">
+      <li>
+        <b>Early signs of cooperation:</b> I attended a Leesburg Fire District meeting on November 24, where I was told two incumbents (Shaffer and Creamer) would be up 
+        for re-election. I introduced my project, provided business cards, and explained my election coverage goals.
+      </li>
+      <li>
+        <b>Momentum stalled after initial contact:</b> Despite that early interaction, I did not receive follow-up communication, and was unable to conduct candidate 
+        questionnaires, interviews, or deeper outreach.
+      </li>
+      <li>
+        <b>Meeting continuity issues:</b> Meetings scheduled for December and January did not appear to occur as posted, mirroring issues seen in several other districts.
+      </li>
+      <li>
+        <b>Compressed election timeline amplified the impact:</b> With candidate filings concluding in late January and the election on February 21st, even short disruptions 
+        effectively consumed most of the available window for meaningful coverage.
+      </li>
+      <li>
+        <b>Limited ability to follow up:</b> Missed or rescheduled meetings restricted opportunities to ask follow-up questions, clarify prior discussions, and invite candidates 
+        to participate in broader voter education efforts.
+      </li>
+      <li>
+        <b>Information gaps for voters:</b> The end result was a ballot with two names and unknown ballot questions, but without public-facing candidate responses that could help 
+        voters understand priorities, perspectives, or district challenges.
+      </li>
+      <li>
+        <b>A familiar pattern:</b> Leesburg reflects how a district can start off accessible and cooperative, yet gradually slip into low visibility due to small administrative 
+        gaps and inconsistent communication.
+      </li>
+      <li>
+        <b>Not a judgment call:</b> This is not an indictment of the district or its leadership — it is a documentation of what was and was not possible for a member of the 
+        public attempting comprehensive, good-faith election coverage.
+      </li>
+      <li>
+        <b>Broader takeaway:</b> When meetings don’t occur as scheduled and outreach goes unanswered — even temporarily — public oversight, press engagement, and voter education 
+        stall quickly under New Jersey’s short fire district election timeline.
+      </li>
+    </ul>
+  </details>
+</section>
 
     <footer>
       <div class="footer-row">
