--- a/fire_districts/maurice-river-2-heislerville-25.html
+++ b/fire_districts/maurice-river-2-heislerville-25.html
@@ -576,25 +576,51 @@
       </details>
     </section>
 
-    <!-- COVERAGE -->
-    <section class="card" id="coverage">
-      <h2>Coverage</h2>
-      <p class="small">
-        District-specific coverage links live here (posts, interviews, meeting notes, etc.).
-      </p>
+    <!-- COVERAGE INSIGHTS -->
+<section class="card">
+  <h2>Coverage Insights</h2>
 
-      <details>
-        <summary>Coverage log</summary>
-        <div class="inside">
-          <ul class="clean">
-            <li><b>Post / article:</b> Coming Soon</li>
-            <li><b>Interview:</b> TBD</li>
-            <li><b>Meeting coverage:</b> This was the first fire district I was able to make contact with. At the second meeting I attended,
-              they were very cooperative with answering questions and expressed interest in coverage moving forward.</li>
-          </ul>
-        </div>
-      </details>
-    </section>
+  <details open>
+    <summary>What this coverage revealed</summary>
+    <ul class="clean">
+      <li>
+        <b>Administrative backlog, not neglect:</b> Public-facing information (including the website) has not been updated recently, largely due to the township clerk being on 
+        vacation and an assistant handling multiple roles at once.
+      </li>
+      <li>
+        <b>Shared strain across districts:</b> This same situation appears to be affecting Cumberland Station 23 as well, suggesting a broader staffing and workload issue rather 
+        than an isolated failure.
+      </li>
+      <li>
+        <b>Thin governance capacity:</b> The district highlights a county-wide reality: key administrative roles are stretched thin, and routine transparency tasks 
+        (website updates, minutes, notices) can fall behind even when everyone is acting in good faith.
+      </li>
+      <li>
+        <b>Fire districts run on very few people:</b> This coverage reinforced how heavily districts rely on a small number of individuals to keep operations, compliance, and 
+        communication moving.
+      </li>
+      <li>
+        <b>Extremely low public participation:</b> During outreach, I was told, “You are the second person from the public to show up here in 12 years.”
+      </li>
+      <li>
+        <b>Compounding awareness gaps:</b> That comment underscores how limited public engagement allows awareness gaps to persist and compound over time.
+      </li>
+      <li>
+        <b>Blurred line between access and record:</b> Although this was one of the first districts I engaged with and people were open to discussion, sometimes conversations were 
+        treated as informal or off-the-record, making it difficult to translate general awareness into official, publishable information for voters. This is where more formal outreach 
+        like my questionnaires, interviews, and forum events matter: the things the press are looking for are consolidated, and responses are clearly documented.
+      </li>
+      <li>
+        <b>Why this matters:</b> Low participation doesn’t just affect elections — it affects public understanding, accountability, recruitment, staffing continuity, and the 
+        long-term resilience of emergency services.
+      </li>
+      <li>
+        <b>Broader takeaway:</b> When very few people are watching, even well-intentioned systems can quietly weaken — not through misconduct, but through attrition, overload, 
+        and lack of visibility.
+      </li>
+    </ul>
+  </details>
+</section>
 
     <footer>
       <div class="footer-row">
