--- a/fire_districts/maurice-river-3-port-elizabeth-27.html
+++ b/fire_districts/maurice-river-3-port-elizabeth-27.html
@@ -494,25 +494,49 @@
       </details>
     </section>
 
-    <!-- COVERAGE -->
-    <section class="card" id="coverage">
-      <h2>Coverage</h2>
-      <p class="small">
-        District-specific coverage links live here (posts, interviews, meeting notes, etc.).
-      </p>
+    <!-- COVERAGE INSIGHTS -->
+<section class="card">
+  <h2>Coverage Insights</h2>
 
-      <details>
-        <summary>Coverage log</summary>
-        <div class="inside">
-          <ul class="clean">
-            <li><b>Post / article:</b> TBD</li>
-            <li><b>Interview:</b> TBD</li>
-            <li><b>Meeting coverage:</b> Attempted to attend the meeting on <b>January 6</b>, but it did not appear to occur as advertised.
-              Next scheduled meeting is <b>February 3</b> (planned follow-up for clarification).</li>
-          </ul>
-        </div>
-      </details>
-    </section>
+  <details open>
+    <summary>What this coverage revealed</summary>
+    <ul class="clean">
+      <li>
+        <b>Meeting access uncertainty:</b> I attempted to attend the January 6th district meeting, but it did not appear to occur as advertised.
+      </li>
+      <li>
+        <b>Conflicting schedule signals:</b> The district website indicates meetings were historically held on Tuesday nights, while November 3rd meeting minutes suggest a 
+        shift to Monday nights.
+      </li>
+      <li>
+        <b>Unverified current schedule:</b> At the time of coverage, the exact, current meeting date and time could not be confidently verified.
+      </li>
+      <li>
+        <b>Compressed follow-up window:</b> The next opportunity for clarification appeared to be February 2nd or 3rd, deep into an already compressed election timeline.
+      </li>
+      <li>
+        <b>Overlapping meetings limit oversight:</b> The Downe / Fortescue Fire District meeting occurs around the same time, making it impractical for a single member of the 
+        public or press to attend both.
+      </li>
+      <li>
+        <b>Recurring structural issue:</b> This district reflects a broader pattern of inconsistent or outdated website information and unclear communication about meeting 
+        dates and times.
+      </li>
+      <li>
+        <b>Information gaps compound quickly:</b> When outreach goes unanswered and online information lags, small administrative issues snowball into major gaps in public 
+        understanding.
+      </li>
+      <li>
+        <b>Why this matters:</b> Even motivated residents and journalists can hit a wall — not due to apathy, but because the information needed to participate simply isn’t clear 
+        or reliable.
+      </li>
+      <li>
+        <b>Broader takeaway:</b> Visibility problems can make a functioning district appear inactive, reinforcing confusion and limiting meaningful public oversight during 
+        critical election windows.
+      </li>
+    </ul>
+  </details>
+</section>
 
     <footer>
       <div class="footer-row">
