--- a/fire_districts/maurice-river-4-cumberland-23.html
+++ b/fire_districts/maurice-river-4-cumberland-23.html
@@ -585,7 +585,13 @@
             <summary>Literal ballot language</summary>
             <div class="inside">
               <p class="small" style="margin:0;">
-                “The legal voters at the annual election of February 21, 2026 shall be asked to approve of the purchase of a firetruck for an amount not exceeding $1,150,000 and a utility vehicle for an amount not exceeding $100,000 and to further authorize the Fire District to undertake the issuance of notes and/or bonds or lease purchase financing relative to the purchase of the vehicles.”
+                “The legal voters at the annual election of February 21, 2026 shall be asked to approve of the purchase of a firetruck for an amount not exceeding $1,150,000 and 
+                a utility vehicle for an amount not exceeding $100,000 and to further authorize the Fire District to undertake the issuance of notes and/or bonds or lease purchase 
+                financing relative to the purchase of the vehicles.”
+                <br>
+                <br>
+                Funding is being obtained through a grant with an attached recommendation letter from Senator Testa, Assemblymen Simonsen and McClellan, Congressman Van Drew, and 
+                potentially Senator Booker.
               </p>
             </div>
           </details>
@@ -594,7 +600,7 @@
             <summary>Plain-English explanation</summary>
             <div class="inside">
               <p class="small" style="margin:0;">
-                Is it ok for the fire district to spend <b>$1.25 million</b> on a fire truck and a utility truck?
+                Is it ok for the fire district to spend <b>$1.25 million</b> on a fire truck and a utility truck through grant money?
               </p>
             </div>
           </details>
@@ -664,26 +670,48 @@
       </details>
     </section>
 
-    <!-- COVERAGE -->
-    <section class="card" id="coverage">
-      <h2>Coverage</h2>
-      <p class="small">
-        District-specific coverage links live here (posts, interviews, meeting notes, etc.).
-      </p>
+    <!-- COVERAGE INSIGHTS -->
+<section class="card">
+  <h2>Coverage Insights</h2>
 
-      <details>
-        <summary>Coverage log</summary>
-        <div class="inside">
-
-          <ul class="clean">
-            <li><b>Post / article:</b> Coming Soon</li>
-            <li><b>Interview:</b> TBD</li>
-            <li><b>Meeting coverage:</b> I initailly connected with Cumberland Station 23 at the Maurice River Township Committee meeting on January 15th. When attending 
-            their subsequent meeting on January 23rd, they were very helpful with answering my questions and discussing coverage moving forward.</li>
-          </ul>
-        </div>
-      </details>
-    </section>
+  <details open>
+    <summary>What this coverage revealed</summary>
+    <ul class="clean">
+      
+      <li>
+        <b>Administrative strain still visible:</b> Similar to other districts, website and
+        posting delays occurred due to the township clerk being on vacation and responsibilities
+        falling to an already stretched backup.
+      </li>
+      <li>
+        <b>Meeting access worked as intended:</b> Meeting times were posted correctly, attendance
+        was straightforward, and cooperation during the meeting was strong — demonstrating a
+        district functioning largely as expected.
+      </li>
+      <li>
+        <b>Past voting behavior matters:</b> This was one of the only districts where prior-year
+        voting results were available, showing a <b>non-trivial number of voters opposed a ballot
+        question</b>, even seemingly without organized public opposition.
+      </li>
+      <li>
+        <b>Why coverage still matters:</b> Even when issues appear straightforward, ballot
+        questions are not automatic “yes” votes. Basic, balanced coverage helps the public
+        understand what is being asked — and why.
+      </li>
+      <li>
+        <b>Beyond district borders:</b> This district made clear how fire district decisions
+        regularly extend outside district lines, through grant coordination, radio programming,
+        and interaction with county, state, and federal officials that voters also elect.
+      </li>
+      <li>
+        <b>Broader takeaway:</b> Cumberland Station 23 is a strong example of how the system is
+        supposed to work — public meetings, a clear ballot question, external support, and open
+        discussion — even while highlighting how thin administrative capacity remains across
+        districts.
+      </li>
+    </ul>
+  </details>
+</section>
 
     <footer>
       <div class="footer-row">
