--- a/fire_districts/downe-1-downe-township.html
+++ b/fire_districts/downe-1-downe-township.html
@@ -503,7 +503,7 @@
       <details>
         <summary>Elizabeth Cowley</summary>
         <ul class="checks">
-          <li><span class="checkmark ok">✓</span> Outreach emailed</li>
+          <li><span class="checkmark ok">✓</span> Outreach emailed and snail mailed</li>
           <li><span class="checkmark no">✕</span> Response received</li>
         </ul>
       </details>
@@ -511,7 +511,7 @@
       <details>
         <summary>Duncan Munson</summary>
         <ul class="checks">
-          <li><span class="checkmark ok">✓</span> Outreach emailed</li>
+          <li><span class="checkmark ok">✓</span> Outreach emailed and snail mailed</li>
           <li><span class="checkmark no">✕</span> Response received</li>
         </ul>
       </details>
@@ -529,8 +529,7 @@
         <summary>No ballot questions confirmed yet</summary>
         <div class="inside">
           <p class="small" style="margin:0;">
-            No ballot questions have been confirmed for this district yet. If question language is provided by the district or official sources,
-            it will be posted here.
+            Mayor Rothman, who is also the fire district clerk, says there are no ballot questions this year.
           </p>
         </div>
       </details>
@@ -548,11 +547,8 @@
         <div class="inside">
           <ul class="clean">
             <li>
-              <b>Public meeting visibility:</b> Meeting minutes appear not updated on the district website since <b>October 2024</b>,
-              and no current meeting time/location information is visible.
-            </li>
-            <li>
-              <b>Unknown meeting schedule:</b> Until a schedule is confirmed, residents may not have a clear way to attend meetings or ask questions.
+              <b>Public meeting visibility:</b> Mayor Rothman says the website crashed, leaving meeting times seemingly unclear and minutes seemingly unposted since October 2024. 
+              Rothman did convey that meetings occur on the first Monday of the month at 6pm.
             </li>
           </ul>
         </div>
@@ -566,7 +562,8 @@
             <li><b>Volunteer model vs affordability:</b> The use of volunteers versus the cost of living and affordability situations should be discussed.</li>
             <li><b>Turnout:</b> Low voter turnout should be re-discussed, as it calls into question the strength of election processes.</li>
             <li><b>Visibility gap:</b> Lack of public attendance and press coverage of meetings leaves the public and voters in the dark regarding essential emergency services.</li>
-            <li><b>Legal Notice vs Meaningful Notice:</b> Traditionally, public meetings across the county only needed to be advertised in one or two newspapers. As the digital age takes over, there is a push to publish on websites, but is that enough? Vineland's current data center issue and low awareness in fire districts suggest more advertising could be done.</li>
+            <li><b>Website/Social Media Maintenance: Online information not being updated or not even existing leads to lack of coordination for the public to know meeting days/times/locations, meeting minutes missing, underutilized social media marketing opportunities, etc.</b></li>
+            <li><b>Legal Notice vs Meaningful Notice:</b> Traditionally, public meetings across the county only needed to be advertised in one or two newspapers. As the digital age takes over, there is a push to publish on websites, but is that enough?</li>
             <li><b>EMS uncertainty:</b> The ongoing Inspira contract discussions leaves districts in limbo about how to handle EMS coverage on a long term vision.</li>
             <li><b>Radio programming:</b> The lack of a radio programmer hinders inter-county communication during mutual aid endeavors.</li>
           </ul>
@@ -574,24 +571,44 @@
       </details>
     </section>
 
-    <!-- COVERAGE -->
-    <section class="card" id="coverage">
-      <h2>Coverage</h2>
-      <p class="small">
-        District-specific coverage links live here (posts, interviews, meeting notes, etc.).
-      </p>
+    <!-- COVERAGE INSIGHTS -->
+<section class="card">
+  <h2>Coverage Insights</h2>
 
-      <details>
-        <summary>Coverage log</summary>
-        <div class="inside">
-          <ul class="clean">
-            <li><b>Post / article:</b> TBD</li>
-            <li><b>Interview:</b> TBD</li>
-            <li><b>Meeting coverage:</b> TBD — meeting schedule and location not currently visible on the district website.</li>
-          </ul>
-        </div>
-      </details>
-    </section>
+  <details open>
+    <summary>What this coverage revealed</summary>
+    <ul class="clean">
+      <li>
+        <b>Lowest-budget district in the county:</b> According to Fire District Clerk Mayor Rothman, the Downe / Fortescue Fire District operates on the smallest budget in 
+        Cumberland County, shaping nearly every operational decision.
+      </li>
+      <li>
+        <b>Leadership transition managed carefully:</b> The previous fire chief stepped down, a new chief is in place, and the district is prioritizing continuity, cost control, 
+        and operational stability during the transition.
+      </li>
+      <li>
+        <b>Visibility gap due to missing information:</b> As of late January 2026, meeting minutes had not been posted since October 2024, and the website did not list 
+        meeting dates, times, or locations—making it difficult for residents, the public, and the press to engage.
+      </li>
+      <li>
+        <b>Issue traced to maintenance, not inactivity:</b> Mayor Rothman explained that meeting information had previously been posted and was likely removed due to a website 
+        maintenance issue or crash, with corrections planned for February 1, 2026.
+      </li>
+      <li>
+        <b>Simple fixes can change public perception:</b> The absence of basic information made a functioning district appear inactive, even though operations were ongoing in 
+        good faith.
+      </li>
+      <li>
+        <b>Onboarding matters:</b> The district’s Facebook page is well run and regularly updated, but that resource was not clearly surfaced—highlighting how pointing newcomers 
+        to the right channels can dramatically improve accessibility and trust.
+      </li>
+      <li>
+        <b>Broader takeaway:</b> A few low-effort steps—routine website maintenance, timely responses to outreach, and clearly directing people to active communication 
+        channels—can be the difference between public confusion and public confidence.
+      </li>
+    </ul>
+  </details>
+</section>
 
     <footer>
       <div class="footer-row">
